# UniCreate

./: PATCHNOTE_v1.0.4.md  PATCHNOTE_v1.0.5.md  PATCHNOTE_v1.0.6.md  README.md  package-lock.json  package.json  tsconfig.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: github.rs  hash.rs  lib.rs  yaml_generator.rs
src/components/: ProfileButton.tsx
src/hooks/: use-device-flow.ts  use-user-repos.ts
src/lib/: i18n.ts  types.ts
src/pages/: Home.tsx  Settings.tsx  StepInstaller.tsx  StepMetadata.tsx  StepReview.tsx  StepSubmit.tsx
src/stores/: auth-session-store.ts  history-store.ts  manifest-store.ts  settings-store.ts
updater/src-tauri/src/: lib.rs
