[package]
name = "unicreate"
version = "1.0.5"
description = "UniCreate - WinGet Manifest Creator GUI"
authors = ["Drrakendu78"]
edition = "2021"

[lib]
name = "unicreate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.13", features = ["json", "stream", "form"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
dirs = "6.0"
base64 = "0.22"
zip = "2"
keyring = { version = "3", features = ["windows-native"] }
